Gevuld met Jeroen info etc

--- a/jeroen.html
+++ b/jeroen.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<title>Jeroen Wind</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<meta charset="utf-8">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -17,10 +19,46 @@
 				</div>
 			</div>
 			<div class="main">
-				
+				<div class="col750">
+					<p>
+						Hallo, ik ben Jeroen Wind en ik ben een muzikale en leergierige programmeur die 21 jaar oud is.<br/>
+						Ik woon in Sellingen, Groningen die je kan vinden in Nederland.<br/>
+					</p>
+					<p>
+						Voordat ik aan het HBO begon, heb ik eerst MBO gedaan. Eerst niveau 3 systeem beheer, dit heb ik niet afgemaakt wegens omstandigheden in mijn leven, maar daarna niveau 4 applicatie ontwikkelaar.</br>
+						Dit heb ik wel in één keer afgemaakt, omdat ik via dit wel een van mijn passies heb gevonden waar ik veel tijd in kan steken en dat is programmeren.
+					</p>
+					<p>
+						In mijn vrije tijd mag ik graag gamen, wandelen, programmeren en photoshoppen.<br/>
+						Zoals eerder beschreven, ik ben muzikaal dus ik hou van muziek. Ik speel zelf gitaar en heb een klein beetje keyboard geleerd, maar als de kans komt om meer instrumenten te bespelen zou ik die nemen.<br/>
+						Er zijn een paar genres die echt mijn interesse pakken, deze zijn:<br/>
+						<ul class="genres">
+							<li>Metal in het algemeen</li>
+							<li>Klassiek</li>
+							<li>Rock met een paar sub-genres</li>
+							<li>Psychedelic trance</li>
+						</ul>
+					</p>
+					<p>
+						Om contact met mij op te nemen moet u dit formulier invullen.
+						<br/>
+						<form method="get">
+							<input type="text" name="naam" placeholder="Uw naam" class="form-control" /><br/>
+							<input type="email" name="mail" placeholder="Uw emailadres" class="form-control" /><br/>
+							<input type="number" name="tel" placeholder="Uw telefoonnummer" class="form-control" /><br/>
+							<textarea name="vraag" placeholder="Vul hier uw verzoek in" rows="5" cols="50"></textarea><br/>
+							<input type="submit" name="submit" value="Verzenden" /> <input type="reset" value="Reset"/><br/>
+						</form>
+					</p>
+				</div>
+				<div class="col250">
+					<p>
+						<img src="img/jeroen.jpg" alt="Jeroen Wind, de enige echte" title="Den Jeroen Wind" height='170' class="jeroen"/> 
+					</p>
+				</div>
 			</div>
 			<div class="footer">
-				&copy; [Input random name here]
+				&copy; Jeroen Wind
 			</div>
 		</div>
 	</body>
